--- a/EX5/EX5.ioc
+++ b/EX5/EX5.ioc
@@ -45,19 +45,19 @@ PA1.GPIO_Label=LED_a
 PA1.Locked=true
 PA1.Signal=GPIO_Output
 PA10.GPIOParameters=GPIO_Label
-PA10.GPIO_Label=LED_GREEN_1
+PA10.GPIO_Label=LED_GREEN1
 PA10.Locked=true
 PA10.Signal=GPIO_Output
 PA11.GPIOParameters=GPIO_Label
-PA11.GPIO_Label=LED_RED_2
+PA11.GPIO_Label=LED_RED2
 PA11.Locked=true
 PA11.Signal=GPIO_Output
 PA12.GPIOParameters=GPIO_Label
-PA12.GPIO_Label=LED_YELLOW_2
+PA12.GPIO_Label=LED_YELLOW2
 PA12.Locked=true
 PA12.Signal=GPIO_Output
 PA13.GPIOParameters=GPIO_Label
-PA13.GPIO_Label=LED_GREEN_2
+PA13.GPIO_Label=LED_GREEN2
 PA13.Locked=true
 PA13.Signal=GPIO_Output
 PA2.GPIOParameters=GPIO_Label
@@ -85,11 +85,11 @@ PA7.GPIO_Label=LED_g
 PA7.Locked=true
 PA7.Signal=GPIO_Output
 PA8.GPIOParameters=GPIO_Label
-PA8.GPIO_Label=LED_RED_1
+PA8.GPIO_Label=LED_RED1
 PA8.Locked=true
 PA8.Signal=GPIO_Output
 PA9.GPIOParameters=GPIO_Label
-PA9.GPIO_Label=LED_YELLOW_1
+PA9.GPIO_Label=LED_YELLOW1
 PA9.Locked=true
 PA9.Signal=GPIO_Output
 PinOutPanel.RotationAngle=0
